--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
-    "json-server": "^0.17.0",
+    "json-server": "^0.4.2",
     "ng-circle-progress": "^1.6.0",
     "ngx-cookie-service": "^13.2.1",
     "rxjs": "~7.4.0",
@@ -37,7 +37,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/build-angular": "^13.3.9",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
